# dpsAVAinversion-pub

./: .gitignore  LICENSE  README.md  environment.yml  install_env.sh  pyproject.toml
data/: field_initial.npz
data/C_Otway2D/: Otway_angleseis_nl.npy  Otway_angleseis_nl150_time.npy  otway_128_256.npy  otway_128_256.npy.npz  report.out
data/C_Otway2D/Velocity_model_2D/: SODAS_model_coords.txt  SODAS_model_coords_shifted.txt  readme.txt
data/C_Otway2D/time_shot/: geometryz.0001  geometryz.0002  geometryz.0003  geometryz.0004  geometryz.0005  geometryz.0006  geometryz.0007  geometryz.0008  geometryz.0009  geometryz.0010  geometryz.0011  geometryz.0012  geometryz.0013  geometryz.0014  geometryz.0015  geometryz.0016  geometryz.0017  geometryz.0018  geometryz.0019  geometryz.0020  geometryz.0021  geometryz.0022  geometryz.0023  geometryz.0024  geometryz.0025  geometryz.0026  geometryz.0027  geometryz.0028  geometryz.0029  (+185 more)
data/field_data/: PoseidonN1_angle.npy  angle_stack_poseidonN1.npy  statistical_wavelet_far.npy  statistical_wavelet_mid.npy  statistical_wavelet_near.npy
data/sample_for_initial_test/: elastic_data_upsample_750.npy  sample10.npy
diffavoinv/: ddim_inversion_and_sampling.py  dps_avo_inversion.py  forward_diffusion_utils.py  utils.py
diffavoinv/vel_shaping_tools/: __init__.py  imaging_operator.py  pw_structural_smoother2d.py  pwd_slope_2d.py
notebooks/: AVA_UQ_synth_otway.ipynb  Otwaymodel_processing.ipynb  ava_inversion_guided_ddpm_synthetic_otway.ipynb  dataset_avo.ipynb
scripts/: build_h5_dataset.py  train_ddpm_3ch.py  train_ddpm_3ch.sh
